--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.defaultInterpreterPath": "./venv/bin/python",
-    "python.formatting.provider": "autopep8",
+    "python.formatting.provider": "none",
     "editor.formatOnSave": true,
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
@@ -8,10 +8,5 @@
     "python.analysis.inlayHints.functionReturnTypes": true,
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8"
-    },
-    // "github.copilot.advanced": {
-    //     "debug.overrideEngine": "codegen",
-    //     "debug.testOverrideProxyUrl": "http://localhost:18080",
-    //     "debug.overrideProxyUrl": "http://localhost:18080"
-    // }
+    }
 }
