--- a/dfs-diffusers/requirements.txt
+++ b/dfs-diffusers/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.95.0
+fastapi==0.100.0
 uvicorn==0.21.1
 pytest==7.2.2
 requests==2.28.2
@@ -6,4 +6,6 @@ tqdm==4.65.0
 httpx==0.23.3
 python-dotenv==1.0.0
 tenacity==8.2.2
-diffusers==0.16.1
+diffusers==0.18.2
+torch==2.0.1
+accelerate==0.21.0
