--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,13 @@ repos:
   hooks:
   - id: flake8
     args: ["--config=setup.cfg"]
-    additional_dependencies: [flake8-isort]
+    additional_dependencies:
+    - flake8-broken-line
+    - flake8-bugbear
+    - flake8-comprehensions
+    - flake8-debugger
+    - flake8-isort
+    - flake8-string-format
 ci:
   autoupdate_schedule: weekly
   skip: []
