--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,13 +29,13 @@ repos:
   rev: 6.0.0
   hooks:
   - id: flake8
-    args: ["--config=setup.cfg"]
     additional_dependencies:
     - flake8-broken-line
     - flake8-bugbear
     - flake8-comprehensions
     - flake8-debugger
     - flake8-isort
+    - flake8-pyproject
     - flake8-string-format
 ci:
   autoupdate_schedule: weekly
