--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,44 @@
 name: CI
-
-env:
-  DOCKER_BUILDKIT: 1
-  DOCKER_CLI_EXPERIMENTAL: "enabled"
-  COMPOSE_DOCKER_CLI_BUILD: 1
-
 on:
-  pull_request:
-    branches: ["main"]
-
   push:
-    branches: ["main"]
-
+  pull_request:
 jobs:
-  linter:
+  models:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code Repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Run pre-commit
-        uses: pre-commit/action@v3.0.0
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - id: list
+      name: List modified models
+      run: |
+        echo "modified=$(
+          for model in $(ls -d *-*); do
+            git diff --quiet HEAD~1 -- $model || echo $model
+          done | jq -Rsc 'split("\n")[:-1]'
+        )" >> $GITHUB_OUTPUT
+    outputs:
+      modified: ${{ steps.list.outputs.modified }}
+  build-test-push:
+    needs: [models]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        model: ${{ fromJson(needs.models.outputs.modified) }}
+    env:
+      VERSION: '1.0.0'
+      DOCKER_BUILDKIT: 1
+      DOCKER_CLI_EXPERIMENTAL: enabled
+      COMPOSE_DOCKER_CLI_BUILD: 1
+    steps:
+    - uses: actions/checkout@v3
+    - uses: docker/setup-qemu-action@v2
+    - uses: docker/setup-buildx-action@v2
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - run: ./build.sh ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '--push' || '--load' }}
+      working-directory: ${{ matrix.model }}
