--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,5 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - run: ./build.sh ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '--push' || '--load' }}
       working-directory: ${{ matrix.model }}
+      env:
+        TESTS_SKIP_GPU: 1
