--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
     needs: [models]
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false  # TODO: remove
       matrix:
         model: ${{ fromJson(needs.models.outputs.modified) }}
     env:
@@ -40,7 +41,7 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - run: ./build.sh ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '--push' || '--load' }}
+    - run: ./build.sh ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '--push' || '' }}
       working-directory: ${{ matrix.model }}
       env:
         TESTS_SKIP_GPU: 1
