--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   push:
   pull_request:
 jobs:
-  models:
+  setup:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -17,15 +17,24 @@ jobs:
             git diff --quiet HEAD~1 -- $model || echo $model
           done | jq -Rsc 'split("\n")[:-1]'
         )" >> $GITHUB_OUTPUT
+    - name: Launch self-hosted runners
+      run: |
+        curl -sSL -X POST -H "X-Api-Key: $API_KEY" https://api.paperspace.io/machines/$MACHINE/start
+        while test $(curl -fsSL -X GET -H "X-Api-Key: $API_KEY" https://api.paperspace.io/machines/getMachinePublic?machineId=$MACHINE | jq -r .state) != ready; do
+          sleep 5
+        done
+      env:
+        API_KEY: ${{ secrets.PAPERSPACE_API_KEY }}
+        MACHINE: ${{ secrets.PAPERSPACE_MACHINE }}
     outputs:
-      modified: ${{ steps.list.outputs.modified }}
+      models: ${{ steps.list.outputs.modified }}
   build-test-push:
-    needs: [models]
-    runs-on: ubuntu-latest
+    needs: setup
+    runs-on: [self-hosted, gpu]
     strategy:
       fail-fast: false  # TODO: remove
       matrix:
-        model: ${{ fromJson(needs.models.outputs.modified) }}
+        model: ${{ fromJson(needs.setup.outputs.models) }}
     env:
       VERSION: '1.0.0'
       DOCKER_BUILDKIT: 1
@@ -33,8 +42,6 @@ jobs:
       COMPOSE_DOCKER_CLI_BUILD: 1
     steps:
     - uses: actions/checkout@v3
-    - uses: docker/setup-qemu-action@v2
-    - uses: docker/setup-buildx-action@v2
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -44,6 +51,17 @@ jobs:
     - run: ./build.sh $BUILDX_ARGS
       working-directory: ${{ matrix.model }}
       env:
-        TESTS_SKIP_GPU: 1
         BUILDX_ARGS: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '--push' || '--load' }}
         BUILDX_PLATFORM: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && 'linux/arm64,linux/amd64' || 'linux/amd64' }}
+        TESTS_SKIP_CPU: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '1' || '' }}
+  teardown:
+    needs: build-test-push
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Terminate self-hosted runners
+      run: |
+        curl -sSL -X POST -H "X-Api-Key: $API_KEY" https://api.paperspace.io/machines/$MACHINE/stop
+      env:
+        API_KEY: ${{ secrets.PAPERSPACE_API_KEY }}
+        MACHINE: ${{ secrets.PAPERSPACE_MACHINE }}
