--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         echo "modified=$(
           for model in $(ls -d *-*); do
             git diff --quiet HEAD~1 -- $model || echo $model
-          done | jq -Rsc 'split("\n")[:-1]'
+          done | sort | jq -Rsc 'split("\n")[:-1]'
         )" >> $GITHUB_OUTPUT
     outputs:
       models: ${{ steps.list.outputs.modified }}
@@ -46,3 +46,10 @@ jobs:
         BUILDX_ARGS: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '--push' || '--load' }}
         BUILDX_PLATFORM: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && 'linux/arm64,linux/amd64' || 'linux/amd64' }}
         TESTS_SKIP_CPU: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '1' || '' }}
+        # avoid OoM errors (TODO: remove when using larger GPU)
+        TESTS_SKIP_GPU: ${{ contains('a2t-whisper,cht-dolly-v2,cht-gorilla,cht-llama-v2,cht-mpt,cht-xgen,dfs-dalle,dfs-diffusers', matrix.model) && '1' || '' }}
+  pass:
+    needs: build-test-push
+    runs-on: ubuntu-latest
+    steps:
+    - run: echo success
