--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         BUILDX_PLATFORM: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && 'linux/arm64,linux/amd64' || 'linux/amd64' }}
         TESTS_SKIP_CPU: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && '1' || '' }}
         # avoid OoM errors (TODO: remove when using larger GPU)
-        TESTS_SKIP_GPU: ${{ contains('a2t-whisper,cht-dolly-v2,cht-gorilla,cht-llama-v2,cht-mpt,cht-xgen,dfs-dalle,dfs-diffusers', matrix.model) && '1' || '' }}
+        TESTS_SKIP_GPU: ${{ contains(fromJSON('["a2t-whisper","cht-dolly-v2","cht-gorilla","cht-llama-v2","cht-mpt","cht-xgen","dfs-dalle","dfs-diffusers"]'), matrix.model) && '1' || '' }}
   pass:
     needs: build-test-push
     runs-on: ubuntu-latest
