--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,8 @@ jobs:
       DOCKER_BUILDKIT: 1
       DOCKER_CLI_EXPERIMENTAL: enabled
       COMPOSE_DOCKER_CLI_BUILD: 1
+    permissions:
+      packages: write
     steps:
     - uses: actions/checkout@v3
     - name: Login to GitHub Container Registry
