--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
   rev: 6.1.0
   hooks:
   - id: flake8
+    args: [-j8]
     additional_dependencies:
     - flake8-broken-line
     - flake8-bugbear
