--- a/a2t-whisper/docker/cpu/Dockerfile
+++ b/a2t-whisper/docker/cpu/Dockerfile
@@ -1,7 +1,5 @@
 FROM python:3.10-slim-bullseye
 
-ARG MODEL_ID
-
 WORKDIR /usr/src/app/
 
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -14,18 +12,14 @@ RUN apt-get update && \
     wget \
     libatlas-base-dev \
     ffmpeg
-
-COPY requirements.txt /usr/src/app/
-
+COPY requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 
+ARG MODEL_ID
 COPY download.py .
-
 RUN python3 download.py --model $MODEL_ID
 
 COPY . .
-
 ENV MODEL_ID=$MODEL_ID
 ENV DEVICE=cpu
-
 CMD python3 main.py
