--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
 [tool.flake8]
-max_line_length = 99
+max_line_length = 120
 
 [tool.isort]
 profile = "black"
+line_length = 120
+
+[tool.black]
+line_length = 120
 
 [tool.mypy]
 check_untyped_defs = true
