--- a/dfs-dalle/requirements.txt
+++ b/dfs-dalle/requirements.txt
@@ -1,13 +1,13 @@
-fastapi==0.95.0
-uvicorn==0.21.1
-pytest==7.2.2
-requests==2.28.2
-tqdm==4.65.0
-httpx==0.23.3
+fastapi==0.103.1
+uvicorn==0.23.2
+pytest==7.4.2
+requests==2.31.0
+tqdm==4.66.1
+httpx==0.25.0
 python-dotenv==1.0.0
-tenacity==8.2.2
-dalle-mini==0.1.4
+tenacity==8.2.3
+dalle-mini==0.1.5
 git+https://github.com/patil-suraj/vqgan-jax.git
-jaxlib==0.3.25
+jaxlib
 flax==0.6.3
 transformers==4.25.1
