--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,8 +86,39 @@ jobs:
         TESTS_SKIP_CPU: ${{ github.event_name == 'push' && '1' || '' }}
         # avoid OoM errors (TODO: remove when using larger GPU)
         TESTS_SKIP_GPU: ${{ contains(fromJSON('["a2t-whisper","cht-dolly-v2","cht-gorilla","cht-llama-v2","cht-mpt","cht-xgen","dfs-dalle","dfs-diffusers"]'), matrix.model) && '1' || '' }}
+  build-bin:
+    concurrency: # terminate on new commits to PRs
+      group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}-${{ matrix.model }}-bin
+      cancel-in-progress: true
+    needs: setup
+    runs-on: macos-latest  # macos-latest-xlarge
+    strategy:
+      fail-fast: false
+      matrix:
+        model: ${{ fromJson(needs.setup.outputs.models) }}
+    # if nothing to do, skip without failing
+    if: needs.setup.outputs.models != '[]'
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.sha || github.ref }}
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+    - id: dist
+      name: build aarch64
+      run: |
+        pip install virtualenv
+        if test -f ./build-aarch64-apple-darwin.sh; then
+          ./build-aarch64-apple-darwin.sh
+        fi
+      working-directory: ${{ matrix.model }}
+    - uses: actions/upload-artifact@v3
+      with:
+        name: ${{ steps.dist.outputs.bin_name }}
+        path: ${{ steps.dist.outputs.bin_path }}
   pass: # convenient single job to apply branch protection to
-    needs: build-test-push
+    needs: [build-test-push, build-bin]
     runs-on: ubuntu-latest
     steps:
     - run: echo success
