--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-    "python.defaultInterpreterPath": "./venv/bin/python",
-    "python.formatting.provider": "none",
+    //"python.defaultInterpreterPath": "./venv/bin/python",
+    //"python.formatting.provider": "none",
     "editor.formatOnSave": true,
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "python.testing.cwd": "${workspaceFolder}/ebd-all-minilm/",
+    //"python.testing.cwd": "${workspaceFolder}/ebd-all-minilm/",
     "python.analysis.inlayHints.functionReturnTypes": true,
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8"
